[package]
name = "proptest-stateful"
version = "0.1.0"
authors = ["Radu Popescu <mail@radupopescu.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proptest = "1.0.0"

[dependencies.rusqlite]
version = "0.25.1"
features = ["bundled"]